@@ -21,6 +21,7 @@ Bugfixes:
  - GBA Video: Fix sprite mis-ordering behavior in some cases (fixes #168)
  - GBA Video: Fix window interactions with 16-color mode 0 mosaic
  - GBA Video: Fix sprite boundary conditions with mosaic
+ - Video: Fix FFmpeg crashing when the file extension is wrong
 Misc:
  - Qt: Disable sync to video by default
  - GBA: Exit cleanly on FATAL if the port supports it
